PA3/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error ';'
    5           | class_list error ';'

    6 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    8 dummy_feature_list: ε
    9                   | feature_list

   10 feature_list: feature ';'
   11             | feature_list feature ';'
   12             | error ';'
   13             | feature_list error ';'

   14 feature: OBJECTID '(' dummy_formal_list ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID ':' TYPEID
   16        | OBJECTID ':' TYPEID ASSIGN expr

   17 dummy_formal_list: ε
   18                  | formal_list

   19 formal_list: formal
   20            | formal_list ',' formal

   21 formal: OBJECTID ':' TYPEID

   22 dummy_actuals: ε
   23              | actuals_list

   24 actuals_list: expr
   25             | actuals_list ',' expr

   26 expr_list: expr ';'
   27          | expr_list expr ';'
   28          | error ';'
   29          | expr_list error ';'

   30 case_list: case
   31          | case_list case

   32 case: OBJECTID ':' TYPEID DARROW expr ';'

   33 let_expr: OBJECTID ':' TYPEID IN expr
   34         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   35         | OBJECTID ':' TYPEID ',' let_expr
   36         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   37         | error IN expr
   38         | error ',' let_expr

   39 expr: OBJECTID ASSIGN expr
   40     | expr '.' OBJECTID '(' dummy_actuals ')'
   41     | expr '@' TYPEID '.' OBJECTID '(' dummy_actuals ')'
   42     | OBJECTID '(' dummy_actuals ')'
   43     | IF expr THEN expr ELSE expr FI
   44     | WHILE expr LOOP expr POOL
   45     | '{' expr_list '}'
   46     | LET let_expr
   47     | CASE expr OF case_list ESAC
   48     | NEW TYPEID
   49     | ISVOID expr
   50     | expr '+' expr
   51     | expr '-' expr
   52     | expr '*' expr
   53     | expr '/' expr
   54     | '~' expr
   55     | expr '<' expr
   56     | expr LE expr
   57     | expr '=' expr
   58     | NOT expr
   59     | '(' expr ')'
   60     | OBJECTID
   61     | INT_CONST
   62     | STR_CONST
   63     | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 14 40 41 42 59
    ')' (41) 14 40 41 42 59
    '*' (42) 52
    '+' (43) 50
    ',' (44) 20 25 35 36 38
    '-' (45) 51
    '.' (46) 40 41
    '/' (47) 53
    ':' (58) 14 15 16 21 32 33 34 35 36
    ';' (59) 4 5 6 7 10 11 12 13 26 27 28 29 32
    '<' (60) 55
    '=' (61) 57
    '@' (64) 41
    '{' (123) 6 7 14 45
    '}' (125) 6 7 14 45
    '~' (126) 54
    error (256) 4 5 12 13 28 29 37 38
    CLASS (258) 6 7
    ELSE (259) 43
    FI (260) 43
    IF (261) 43
    IN (262) 33 34 37
    INHERITS (263) 7
    LET (264) 46
    LOOP (265) 44
    POOL (266) 44
    THEN (267) 43
    WHILE (268) 44
    CASE (269) 47
    ESAC (270) 47
    OF (271) 47
    DARROW (272) 32
    NEW (273) 48
    ISVOID (274) 49
    STR_CONST <symbol> (275) 62
    INT_CONST <symbol> (276) 61
    BOOL_CONST <boolean> (277) 63
    TYPEID <symbol> (278) 6 7 14 15 16 21 32 33 34 35 36 41 48
    OBJECTID <symbol> (279) 14 15 16 21 32 33 34 35 36 39 40 41 42 60
    ASSIGN (280) 16 34 36 39
    NOT (281) 58
    LE (282) 56
    ERROR (283)
    FLAG (285)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <program> (47)
        on left: 1
        on right: 0
    class_list <classes> (48)
        on left: 2 3 4 5
        on right: 1 3 5
    class <class_> (49)
        on left: 6 7
        on right: 2 3
    dummy_feature_list <features> (50)
        on left: 8 9
        on right: 6 7
    feature_list <features> (51)
        on left: 10 11 12 13
        on right: 9 11 13
    feature <feature> (52)
        on left: 14 15 16
        on right: 10 11
    dummy_formal_list <formals> (53)
        on left: 17 18
        on right: 14
    formal_list <formals> (54)
        on left: 19 20
        on right: 18 20
    formal <formal> (55)
        on left: 21
        on right: 19 20
    dummy_actuals <expressions> (56)
        on left: 22 23
        on right: 40 41 42
    actuals_list <expressions> (57)
        on left: 24 25
        on right: 23 25
    expr_list <expressions> (58)
        on left: 26 27 28 29
        on right: 27 29 45
    case_list <cases> (59)
        on left: 30 31
        on right: 31 47
    case <case_> (60)
        on left: 32
        on right: 30 31
    let_expr <expression> (61)
        on left: 33 34 35 36 37 38
        on right: 35 36 38 46
    expr <expression> (62)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 14 16 24 25 26 27 32 33 34 36 37 39 40 41 43 44 47 49 50 51 52 53 54 55 56 57 58 59


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error • ';'

    ';'  shift, and go to state 6


State 2

    6 class: CLASS • TYPEID '{' dummy_feature_list '}' ';'
    7      | CLASS • TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program • $end

    $end  shift, and go to state 8


State 4

    1 program: class_list •
    3 class_list: class_list • class
    5           | class_list • error ';'

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


State 5

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 6

    4 class_list: error ';' •

    $default  reduce using rule 4 (class_list)


State 7

    6 class: CLASS TYPEID • '{' dummy_feature_list '}' ';'
    7      | CLASS TYPEID • INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 8

    0 $accept: program $end •

    $default  accept


State 9

    5 class_list: class_list error • ';'

    ';'  shift, and go to state 13


State 10

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 11

    7 class: CLASS TYPEID INHERITS • TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 14


State 12

    6 class: CLASS TYPEID '{' • dummy_feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 8 (dummy_feature_list)

    dummy_feature_list  go to state 17
    feature_list        go to state 18
    feature             go to state 19


State 13

    5 class_list: class_list error ';' •

    $default  reduce using rule 5 (class_list)


State 14

    7 class: CLASS TYPEID INHERITS TYPEID • '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 20


State 15

   12 feature_list: error • ';'

    ';'  shift, and go to state 21


State 16

   14 feature: OBJECTID • '(' dummy_formal_list ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID • ':' TYPEID
   16        | OBJECTID • ':' TYPEID ASSIGN expr

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


State 17

    6 class: CLASS TYPEID '{' dummy_feature_list • '}' ';'

    '}'  shift, and go to state 24


State 18

    9 dummy_feature_list: feature_list •
   11 feature_list: feature_list • feature ';'
   13             | feature_list • error ';'

    error     shift, and go to state 25
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 9 (dummy_feature_list)

    feature  go to state 26


State 19

   10 feature_list: feature • ';'

    ';'  shift, and go to state 27


State 20

    7 class: CLASS TYPEID INHERITS TYPEID '{' • dummy_feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 8 (dummy_feature_list)

    dummy_feature_list  go to state 28
    feature_list        go to state 18
    feature             go to state 19


State 21

   12 feature_list: error ';' •

    $default  reduce using rule 12 (feature_list)


State 22

   14 feature: OBJECTID '(' • dummy_formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 29

    $default  reduce using rule 17 (dummy_formal_list)

    dummy_formal_list  go to state 30
    formal_list        go to state 31
    formal             go to state 32


State 23

   15 feature: OBJECTID ':' • TYPEID
   16        | OBJECTID ':' • TYPEID ASSIGN expr

    TYPEID  shift, and go to state 33


State 24

    6 class: CLASS TYPEID '{' dummy_feature_list '}' • ';'

    ';'  shift, and go to state 34


State 25

   13 feature_list: feature_list error • ';'

    ';'  shift, and go to state 35


State 26

   11 feature_list: feature_list feature • ';'

    ';'  shift, and go to state 36


State 27

   10 feature_list: feature ';' •

    $default  reduce using rule 10 (feature_list)


State 28

    7 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list • '}' ';'

    '}'  shift, and go to state 37


State 29

   21 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 38


State 30

   14 feature: OBJECTID '(' dummy_formal_list • ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 39


State 31

   18 dummy_formal_list: formal_list •
   20 formal_list: formal_list • ',' formal

    ','  shift, and go to state 40

    $default  reduce using rule 18 (dummy_formal_list)


State 32

   19 formal_list: formal •

    $default  reduce using rule 19 (formal_list)


State 33

   15 feature: OBJECTID ':' TYPEID •
   16        | OBJECTID ':' TYPEID • ASSIGN expr

    ASSIGN  shift, and go to state 41

    $default  reduce using rule 15 (feature)


State 34

    6 class: CLASS TYPEID '{' dummy_feature_list '}' ';' •

    $default  reduce using rule 6 (class)


State 35

   13 feature_list: feature_list error ';' •

    $default  reduce using rule 13 (feature_list)


State 36

   11 feature_list: feature_list feature ';' •

    $default  reduce using rule 11 (feature_list)


State 37

    7 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' • ';'

    ';'  shift, and go to state 42


State 38

   21 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 43


State 39

   14 feature: OBJECTID '(' dummy_formal_list ')' • ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 44


State 40

   20 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 29

    formal  go to state 45


State 41

   16 feature: OBJECTID ':' TYPEID ASSIGN • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 60


State 42

    7 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' •

    $default  reduce using rule 7 (class)


State 43

   21 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 21 (formal)


State 44

   14 feature: OBJECTID '(' dummy_formal_list ')' ':' • TYPEID '{' expr '}'

    TYPEID  shift, and go to state 61


State 45

   20 formal_list: formal_list ',' formal •

    $default  reduce using rule 20 (formal_list)


State 46

   43 expr: IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 62


State 47

   46 expr: LET • let_expr

    error     shift, and go to state 63
    OBJECTID  shift, and go to state 64

    let_expr  go to state 65


State 48

   44 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 66


State 49

   47 expr: CASE • expr OF case_list ESAC

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 67


State 50

   48 expr: NEW • TYPEID

    TYPEID  shift, and go to state 68


State 51

   49 expr: ISVOID • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 69


State 52

   62 expr: STR_CONST •

    $default  reduce using rule 62 (expr)


State 53

   61 expr: INT_CONST •

    $default  reduce using rule 61 (expr)


State 54

   63 expr: BOOL_CONST •

    $default  reduce using rule 63 (expr)


State 55

   39 expr: OBJECTID • ASSIGN expr
   42     | OBJECTID • '(' dummy_actuals ')'
   60     | OBJECTID •

    ASSIGN  shift, and go to state 70
    '('     shift, and go to state 71

    $default  reduce using rule 60 (expr)


State 56

   58 expr: NOT • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 72


State 57

   54 expr: '~' • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 73


State 58

   45 expr: '{' • expr_list '}'

    error       shift, and go to state 74
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr_list  go to state 75
    expr       go to state 76


State 59

   59 expr: '(' • expr ')'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 77


State 60

   16 feature: OBJECTID ':' TYPEID ASSIGN expr •
   40 expr: expr • '.' OBJECTID '(' dummy_actuals ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' dummy_actuals ')'
   50     | expr • '+' expr
   51     | expr • '-' expr
   52     | expr • '*' expr
   53     | expr • '/' expr
   55     | expr • '<' expr
   56     | expr • LE expr
   57     | expr • '=' expr

    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86

    $default  reduce using rule 16 (feature)


State 61

   14 feature: OBJECTID '(' dummy_formal_list ')' ':' TYPEID • '{' expr '}'

    '{'  shift, and go to state 87


State 62

   40 expr: expr • '.' OBJECTID '(' dummy_actuals ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' dummy_actuals ')'
   43     | IF expr • THEN expr ELSE expr FI
   50     | expr • '+' expr
   51     | expr • '-' expr
   52     | expr • '*' expr
   53     | expr • '/' expr
   55     | expr • '<' expr
   56     | expr • LE expr
   57     | expr • '=' expr

    THEN  shift, and go to state 88
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '@'   shift, and go to state 85
    '.'   shift, and go to state 86


State 63

   37 let_expr: error • IN expr
   38         | error • ',' let_expr

    IN   shift, and go to state 89
    ','  shift, and go to state 90


State 64

   33 let_expr: OBJECTID • ':' TYPEID IN expr
   34         | OBJECTID • ':' TYPEID ASSIGN expr IN expr
   35         | OBJECTID • ':' TYPEID ',' let_expr
   36         | OBJECTID • ':' TYPEID ASSIGN expr ',' let_expr

    ':'  shift, and go to state 91


State 65

   46 expr: LET let_expr •

    $default  reduce using rule 46 (expr)


State 66

   40 expr: expr • '.' OBJECTID '(' dummy_actuals ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' dummy_actuals ')'
   44     | WHILE expr • LOOP expr POOL
   50     | expr • '+' expr
   51     | expr • '-' expr
   52     | expr • '*' expr
   53     | expr • '/' expr
   55     | expr • '<' expr
   56     | expr • LE expr
   57     | expr • '=' expr

    LOOP  shift, and go to state 92
    LE    shift, and go to state 78
    '<'   shift, and go to state 79
    '='   shift, and go to state 80
    '+'   shift, and go to state 81
    '-'   shift, and go to state 82
    '*'   shift, and go to state 83
    '/'   shift, and go to state 84
    '@'   shift, and go to state 85
    '.'   shift, and go to state 86


State 67

   40 expr: expr • '.' OBJECTID '(' dummy_actuals ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' dummy_actuals ')'
   47     | CASE expr • OF case_list ESAC
   50     | expr • '+' expr
   51     | expr • '-' expr
   52     | expr • '*' expr
   53     | expr • '/' expr
   55     | expr • '<' expr
   56     | expr • LE expr
   57     | expr • '=' expr

    OF   shift, and go to state 93
    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86


State 68

   48 expr: NEW TYPEID •

    $default  reduce using rule 48 (expr)


State 69

   40 expr: expr • '.' OBJECTID '(' dummy_actuals ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' dummy_actuals ')'
   49     | ISVOID expr •
   50     | expr • '+' expr
   51     | expr • '-' expr
   52     | expr • '*' expr
   53     | expr • '/' expr
   55     | expr • '<' expr
   56     | expr • LE expr
   57     | expr • '=' expr

    '@'  shift, and go to state 85
    '.'  shift, and go to state 86

    $default  reduce using rule 49 (expr)


State 70

   39 expr: OBJECTID ASSIGN • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 94


State 71

   42 expr: OBJECTID '(' • dummy_actuals ')'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    $default  reduce using rule 22 (dummy_actuals)

    dummy_actuals  go to state 95
    actuals_list   go to state 96
    expr           go to state 97


State 72

   40 expr: expr • '.' OBJECTID '(' dummy_actuals ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' dummy_actuals ')'
   50     | expr • '+' expr
   51     | expr • '-' expr
   52     | expr • '*' expr
   53     | expr • '/' expr
   55     | expr • '<' expr
   56     | expr • LE expr
   57     | expr • '=' expr
   58     | NOT expr •

    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86

    $default  reduce using rule 58 (expr)


State 73

   40 expr: expr • '.' OBJECTID '(' dummy_actuals ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' dummy_actuals ')'
   50     | expr • '+' expr
   51     | expr • '-' expr
   52     | expr • '*' expr
   53     | expr • '/' expr
   54     | '~' expr •
   55     | expr • '<' expr
   56     | expr • LE expr
   57     | expr • '=' expr

    '@'  shift, and go to state 85
    '.'  shift, and go to state 86

    $default  reduce using rule 54 (expr)


State 74

   28 expr_list: error • ';'

    ';'  shift, and go to state 98


State 75

   27 expr_list: expr_list • expr ';'
   29          | expr_list • error ';'
   45 expr: '{' expr_list • '}'

    error       shift, and go to state 99
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '}'         shift, and go to state 100
    '('         shift, and go to state 59

    expr  go to state 101


State 76

   26 expr_list: expr • ';'
   40 expr: expr • '.' OBJECTID '(' dummy_actuals ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' dummy_actuals ')'
   50     | expr • '+' expr
   51     | expr • '-' expr
   52     | expr • '*' expr
   53     | expr • '/' expr
   55     | expr • '<' expr
   56     | expr • LE expr
   57     | expr • '=' expr

    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86
    ';'  shift, and go to state 102


State 77

   40 expr: expr • '.' OBJECTID '(' dummy_actuals ')'
   41     | expr • '@' TYPEID '.' OBJECTID '(' dummy_actuals ')'
   50     | expr • '+' expr
   51     | expr • '-' expr
   52     | expr • '*' expr
   53     | expr • '/' expr
   55     | expr • '<' expr
   56     | expr • LE expr
   57     | expr • '=' expr
   59     | '(' expr • ')'

    LE   shift, and go to state 78
    '<'  shift, and go to state 79
    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '@'  shift, and go to state 85
    '.'  shift, and go to state 86
    ')'  shift, and go to state 103


State 78

   56 expr: expr LE • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 104


State 79

   55 expr: expr '<' • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 105


State 80

   57 expr: expr '=' • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 106


State 81

   50 expr: expr '+' • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 107


State 82

   51 expr: expr '-' • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 108


State 83

   52 expr: expr '*' • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 109


State 84

   53 expr: expr '/' • expr

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 110


State 85

   41 expr: expr '@' • TYPEID '.' OBJECTID '(' dummy_actuals ')'

    TYPEID  shift, and go to state 111


State 86

   40 expr: expr '.' • OBJECTID '(' dummy_actuals ')'

    OBJECTID  shift, and go to state 112


State 87

   14 feature: OBJECTID '(' dummy_formal_list ')' ':' TYPEID '{' • expr '}'

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 113


State 88

   43 expr: IF expr THEN • expr ELSE expr FI

    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    STR_CONST   shift, and go to state 52
    INT_CONST   shift, and go to state 53
    BOOL_CONST  shift, and go to state 54
    OBJECTID    shift, and go to state 55
    NOT         shift, and go to state 56
    '~'         shift, and go to state 57
    '{'         shift, and go to state 58
    '('         shift, and go to state 59

    expr  go to state 114


State 89

   37 let_expr: error IN • expr
